--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
     <section id="services" class="services section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" >
         <h2>Services</h2>
         <p>Featured Services<br></p>
       </div><!-- End Section Title -->
@@ -653,7 +653,7 @@
 
               <div class="col-lg-12">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bi bi-geo-alt"></i>
+                  <i class="bi bi-geo-alt" style="color: yellow;"></i>
                   <h3>Address</h3>
                   <p>Ngousso 5e Arr. Yaoundé, Rue   1640  </p>
                 </div>
@@ -661,7 +661,7 @@
 
               <div class="col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bi bi-telephone"></i>
+                  <i class="bi bi-telephone" style="color: yellow;"></i>
                   <h3>Call Us</h3>
                   <p>+237 679 827 840</p>
                 </div>
@@ -669,7 +669,7 @@
 
               <div class="col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
-                  <i class="bi bi-envelope"></i>
+                  <i class="bi bi-envelope" style="color: yellow;"></i>
                   <h3>Email Us</h3>
                   <p>admin@bicod.org</p>
                 </div>
