--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <h2 data-aos="fade-up" data-aos-delay="100" style="text-align: center;"> Bureau International De Coopération Au Development</h2>
         <p data-aos="fade-up" data-aos-delay="200">Chez BICOD, nous nous engageons à fournir des services de haute qualité, à innover et à établir des partenariats solides pour répondre à vos besoins.</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-          <a href="#about" class="btn-get-started" style="background-color: yellow;">Commencer</a>
+          <a href="#about" class="btn-get-started" style="background-color: #FFC107;">Commencer</a>
           <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Regarder une vidéo</span></a> -->
         </div>
       </div>
@@ -257,7 +257,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-emoji-smile color-blue flex-shrink-0" style="color: yellow;"></i>
+              <i class="bi bi-emoji-smile color-blue flex-shrink-0" style="color: #FFC107;"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Clients Satisfaits</p>
@@ -267,7 +267,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-journal-richtext color-orange flex-shrink-0" style="color: yellow;"></i>
+              <i class="bi bi-journal-richtext color-orange flex-shrink-0" style="color: #FFC107;"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Missions executées</p>
@@ -277,7 +277,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-headset color-green flex-shrink-0" style="color: yellow;"></i>
+              <i class="bi bi-headset color-green flex-shrink-0" style="color: #FFC107;"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="230" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Nos Elèves</p>
@@ -287,7 +287,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item d-flex align-items-center w-100 h-100">
-              <i class="bi bi-people color-pink flex-shrink-0" style="color: yellow;"></i>
+              <i class="bi bi-people color-pink flex-shrink-0" style="color: #FFC107;"></i>
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Nos Agents</p>
@@ -320,7 +320,7 @@
                 <img src="assets/img/health2.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
-                <div class="icon" style="background-color: yellow;">
+                <div class="icon" style="background-color: #FFC107;">
                   <i class="bi bi-activity" ></i>
                 </div>
                 <a href="santé.html" class="stretched-link">
@@ -337,7 +337,7 @@
                 <img src="assets/img/development_durable.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
-                <div class="icon" style="background-color: yellow;">
+                <div class="icon" style="background-color: #FFC107;">
                   <i class="bi bi-broadcast"></i>
                 </div>
                 <a href="developpement_durable.html" class="stretched-link">
@@ -354,7 +354,7 @@
                 <img src="assets/img/services-3.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
-                <div class="icon" style="background-color: yellow;">
+                <div class="icon" style="background-color: #FFC107;">
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="mystery_shoping.html" class="stretched-link">
@@ -371,7 +371,7 @@
                 <img src="assets/img/iot.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
-                <div class="icon" style="background-color: yellow;">
+                <div class="icon" style="background-color: #FFC107;">
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="Validation des systèmes informatisés (VSI).html" class="stretched-link">
@@ -389,7 +389,7 @@
                 <img src="assets/img/regulatory.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
-                <div class="icon" style="background-color: yellow;">
+                <div class="icon" style="background-color: #FFC107;">
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="formation.html" class="stretched-link">
@@ -407,7 +407,7 @@
                 <img src="assets/img/audit.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
-                <div class="icon" style="background-color: yellow;">
+                <div class="icon" style="background-color: #FFC107;">
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="audit.html" class="stretched-link">
@@ -653,7 +653,7 @@
 
               <div class="col-lg-12">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
-                  <i class="bi bi-geo-alt" style="color: yellow;"></i>
+                  <i class="bi bi-geo-alt" style="color: #FFC107;"></i>
                   <h3>Address</h3>
                   <p>Ngousso 5e Arr. Yaoundé, Rue   1640  </p>
                 </div>
@@ -661,7 +661,7 @@
 
               <div class="col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="300">
-                  <i class="bi bi-telephone" style="color: yellow;"></i>
+                  <i class="bi bi-telephone" style="color: #FFC107;"></i>
                   <h3>Call Us</h3>
                   <p>+237 679 827 840</p>
                 </div>
@@ -669,7 +669,7 @@
 
               <div class="col-md-6">
                 <div class="info-item d-flex flex-column justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="400">
-                  <i class="bi bi-envelope" style="color: yellow;"></i>
+                  <i class="bi bi-envelope" style="color: #FFC107;"></i>
                   <h3>Email Us</h3>
                   <p>admin@bicod.org</p>
                 </div>
@@ -679,7 +679,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form id="contact-form" data-aos="fade-up" data-aos-delay="500">
+            <form action="https://formspree.io/f/mnnjokrg" method="POST" id="contact-form" data-aos="fade-up" data-aos-delay="500">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -703,7 +703,7 @@
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div> -->
 
-                  <button type="submit" onclick="sendMail()">Send Message</button>
+                  <button type="submit">Send Message</button>
                 </div>
 
               </div>
