--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center">
+  <header id="header" class="header d-flex align-items-center fixed-top" style="background-color: #280d81;">
+    <div class="container-fluid container-xl position-relative d-flex align-items-center" >
 
       <a href="index.html" class="logo d-flex align-items-center me-auto">
         <img style="transform: scale(3) !important;" src="assets/img/logo.png" alt="" >
