--- a/index.html
+++ b/index.html
@@ -161,7 +161,13 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
+      <img src="assets/img/PHOTO DE COUVERTURE 1.jpg" alt="" data-aos="fade-in"> -->
+<!-- Image Container
+<!-- <div class="slideshow">
+  <img id="slideshow-img" src="assets/img/PHOTO DE COUVERTURE 1.jpg" alt="" data-aos="fade-in">
+</div> -->
+
+
 
       <div class="container d-flex flex-column align-items-center">
         <h2 data-aos="fade-up" data-aos-delay="100" style="text-align: center;"> Bureau International De Coopération Au Development</h2>
@@ -317,7 +323,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="200">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/health2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/INGENIEURIE DE SANTE.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon" style="background-color: #FFC107;">
@@ -334,7 +340,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="300">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/development_durable.jpg" class="img-fluid" alt="">
+                <img src="assets/img/DEVELOPPEMENT DURABLE.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon" style="background-color: #FFC107;">
@@ -368,7 +374,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/iot.jpg" class="img-fluid" alt="">
+                <img src="assets/img/SYSTEMES INFORMATISES.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon" style="background-color: #FFC107;">
@@ -386,7 +392,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/regulatory.jpg" class="img-fluid" alt="">
+                <img src="assets/img/FORMATION 1.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon" style="background-color: #FFC107;">
@@ -846,6 +852,11 @@
       });
    })();
 </script>
+
+
+
+
+
 
 </body>
 
