--- a/Normes internationales en matière d'expérience client .html
+++ b/Normes internationales en matière d'expérience client .html
@@ -180,7 +180,7 @@
           <div class="arrow" onclick="location.href='index.html#services';"></div>
 
           <p>
-            L'ICXS2019 a évolué dans le but de la maintenir comme la seule norme mondiale pour la fourniture de l'excellence du service d'expérience client soutenue par un organisme de certification tiers. <br>
+            L'ICXS2019 a évolué dans le but de se maintenir comme la seule norme mondiale pour la fourniture de l'excellence du service d'expérience client soutenue par un organisme de certification tiers. <br>
             L'un des principaux objectifs de l'ICXS2019 est de motiver les organisations à concentrer leur attention sur l'expérience client en offrant un service d'excellence.
           </p>
           <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
