--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#hero" class="active">Accueil</a></li>
+          <li><a href="#about">A propos</a></li>
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
          
@@ -120,7 +120,7 @@
 
 
               
-              <li class="dropdown"><a href="formation.html"><span>Formation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="formation.html"><span>Formations</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <!-- <li><a href="calender.html">Système de management de la qualité (SMQ)</a></li>
                   <li><a href="calender.html">Validation des systèmes informatisés
@@ -180,7 +180,7 @@
 
     </section><!-- /Hero Section -->
 
-    <!-- About Section -->
+    <!-- A propos Section -->
     <section id="about" class="about section">
 
       <div class="container">
@@ -226,7 +226,7 @@
 
       </div>
 
-    </section><!-- /About Section -->
+    </section><!-- /A propos Section -->
 
 
 
@@ -374,7 +374,7 @@
           <div class="col-xl-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="service-item">
               <div class="img">
-                <img src="assets/img/SYSTEMES INFORMATISES.jpg" class="img-fluid" alt="">
+                <img src="assets/img/2.jpg" class="img-fluid" alt="">
               </div>
               <div class="details position-relative">
                 <div class="icon" style="background-color: #FFC107;">
@@ -399,7 +399,7 @@
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="formation.html" class="stretched-link">
-                  <h3>Formation</h3>
+                  <h3>Formations</h3>
                 </a>
 <!-- <p> Ici, vous aurez l'opportunité d'approfondir vos compétences dans des domaines clés où notre cabinet excelle, tels que l'ingénierie de la santé, le développement durable, l'expérience client entre autres.</p> -->
               </div>
@@ -689,15 +689,15 @@
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <input type="text" name="name" class="form-control" placeholder="Votre nom" required="">
                 </div>
 
                 <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                  <input type="email" class="form-control" name="email" placeholder="Votre Email" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  <input type="text" class="form-control" name="subject" placeholder="Sujet" required="">
                 </div>
 
                 <div class="col-md-12">
@@ -776,7 +776,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Liens utiles</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Accueil</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
