--- a/article1.html
+++ b/article1.html
@@ -104,8 +104,8 @@ footer {
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#hero" class="active">Accueil</a></li>
+          <li><a href="#about">A propos</a></li>
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
          
@@ -152,7 +152,7 @@ footer {
 
 
               
-              <li class="dropdown"><a href="formation.html"><span>Formation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="formation.html"><span>Formations</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <!-- <li><a href="calender.html">Système de management de la qualité (SMQ)</a></li>
                   <li><a href="calender.html">Validation des systèmes informatisés
@@ -279,7 +279,7 @@ footer {
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Liens utiles</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Accueil</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
