--- a/audit.html
+++ b/audit.html
@@ -35,6 +35,29 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 
+  <style>
+
+.page-title {
+  position: relative;
+  width: 100%;
+  height: 400px; /* Ajuste selon tes besoins */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  background-size: cover;
+  background-position: center;
+  animation: slideBackground 9s infinite;
+}
+
+@keyframes slideBackground {
+  0%, 33% { background-image: url("assets/img/1.jpg"); }
+  34%, 66% { background-image: url("assets/img/2.jpg"); }
+  67%, 100% { background-image: url("assets/img/3.jpg"); }
+}
+  </style>
 </head>
 
 <body class="index-page">
@@ -49,8 +72,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#hero" class="active">Accueil</a></li>
+          <li><a href="#about">A propos</a></li>
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
          
@@ -97,7 +120,7 @@
 
 
               
-              <li class="dropdown"><a href="formation.html"><span>Formation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="formation.html"><span>Formations</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <!-- <li><a href="calender.html">Système de management de la qualité (SMQ)</a></li>
                   <li><a href="calender.html">Validation des systèmes informatisés
@@ -136,13 +159,13 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
+    <div class="page-title dark-background" data-aos="fade">
       <div class="container position-relative">
         <h1>AUDIT</h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li class="current">AUDIT</li>
           </ol>
         </nav>
@@ -243,7 +266,7 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Liens utiles</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Accueil</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contactez nous</a></li>
