--- a/developpement_durable.html
+++ b/developpement_durable.html
@@ -54,6 +54,30 @@
 .arrow:hover {
     border-color: #007BFF;
     transform: rotate(135deg) scale(1.1);
+
+}
+
+
+    .page-title {
+  position: relative;
+  width: 100%;
+  height: 400px; /* Ajuste selon tes besoins */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  background-size: cover;
+  background-position: center;
+  animation: slideBackground 9s infinite;
+}
+
+@keyframes slideBackground {
+  0%, 33% { background-image: url("assets/img/1.jpg"); }
+  34%, 66% { background-image: url("assets/img/2.jpg"); }
+  67%, 100% { background-image: url("assets/img/3.jpg"); }
+}
   </style>
 </head>
 
@@ -69,8 +93,8 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#hero" class="active">Accueil</a></li>
+          <li><a href="#about">A propos</a></li>
           <!-- <li><a href="#services">Services</a></li> -->
           <!-- <li><a href="#portfolio">Portfolio</a></li> -->
          
@@ -117,7 +141,7 @@
 
 
               
-              <li class="dropdown"><a href="formation.html"><span>Formation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li class="dropdown"><a href="formation.html"><span>Formations</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <!-- <li><a href="calender.html">Système de management de la qualité (SMQ)</a></li>
                   <li><a href="calender.html">Validation des systèmes informatisés
@@ -156,13 +180,13 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/page-title-bg.webp);">
+    <div class="page-title dark-background" data-aos="fade">
       <div class="container position-relative">
         <h1>Développement Durable</h1>
         <!-- <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p> -->
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li class="current">Développement Durable</li>
           </ol>
         </nav>
@@ -264,8 +288,8 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="index.html">Accueil</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#about">A propos us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#contact">Contact us</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#team">Personnel</a></li>
